--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "eslint": "^7.2.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-react": "^7.20.0",
+    "moment": "^2.26.0",
     "prettier": "^2.0.5",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
