--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
+    "@testing-library/react-hooks": "^3.3.0",
     "@testing-library/user-event": "^7.1.2",
     "eslint": "^7.2.0",
     "eslint-plugin-import": "^2.20.2",
@@ -17,7 +18,7 @@
     "react-google-charts": "^3.0.15",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "1.0.17",
+    "react-scripts": "1.1.5",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
@@ -27,6 +28,7 @@
     "build": "react-scripts build && yarn run ssr",
     "ssr": "cross-env NODE_ENV=production webpack --config ./webpack.ssr.config.js",
     "test": "react-scripts test --env=jsdom",
+    "test:ci": "CI=true yarn test --coverage -u",
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -41,7 +43,19 @@
     "@commitlint/config-conventional": "^8.3.4",
     "cross-env": "^7.0.2",
     "husky": "^4.2.5",
-    "lint-staged": "^10.2.9"
+    "jest-localstorage-mock": "^2.4.2",
+    "lint-staged": "^10.2.9",
+    "react-test-renderer": "^16.13.1",
+    "url-search-params-polyfill": "^8.1.0",
+    "whatwg-fetch": "^3.0.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!<rootDir>/node_modules/",
+      "!<rootDir>/src/index.js",
+      "!<rootDir>/src/App.jsx"
+    ]
   },
   "husky": {
     "hooks": {
