--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,16 +36,12 @@ jobs:
             echo $CIRCLE_BUILD_NUM "circle build num"
             echo $CIRCLE_BRANCH "CIRCLE_BRANCH "
             echo $REGISTRY_SERVER "REGISTRY_SERVER"
-            echo $CIRCLE_BUILD_NUM "circle build num"
-            echo $$IMAGE_NAME "$IMAGE_NAME" 
-
-            TAG="1.0.${CIRCLE_BUILD_NUM}-$(echo $CIRCLE_BRANCH | tr '\/' '-')"
+            echo $IMAGE_NAME "$IMAGE_NAME"
             mkdir -p project
-            echo $TAG > ~/project/version
-            docker build -t $REGISTRY_SERVER/$IMAGE_NAME:$TAG .
+            docker build -t $REGISTRY_SERVER/$IMAGE_NAME .
             docker login -u $REGISTRY_UN -p $REGISTRY_PW $REGISTRY_SERVER
-            docker push $REGISTRY_SERVER/$IMAGE_NAME:$TAG
-            docker rmi -f $REGISTRY_SERVER/$IMAGE_NAME:$TAG
+            docker push $REGISTRY_SERVER/$IMAGE_NAME
+            docker rmi -f $REGISTRY_SERVER/$IMAGE_NAME
 #            - save_cache:
 #                name: Save Yarn Package Cache
 #                key: yarn-packages-{{ checksum "yarn.lock" }}
