--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,9 @@ jobs:
             echo $CIRCLE_BUILD_NUM "circle build num"
             echo $CIRCLE_BRANCH "CIRCLE_BRANCH "
             echo $REGISTRY_SERVER "REGISTRY_SERVER"
+            echo $REGISTRY_NAME "REGISTRY_NAME"
             echo $IMAGE_NAME "IMAGE_NAME"
+
             mkdir -p project
             docker build -t $REGISTRY_SERVER/$IMAGE_NAME .
             docker login -u $REGISTRY_UN -p $REGISTRY_PW $REGISTRY_SERVER
