--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,8 @@ jobs:
       - run:
           name: Build and push Docker image
           command: |
-            echo $CIRCLE_BUILD_NUM "circle build num"
+            echo $CIRCLE_BUILD_NUM "CIRCLE_BUILD_NUM"
+            echo $IMAGE_NAME "IMAGE_NAME"
             echo $CIRCLE_BRANCH "CIRCLE_BRANCH "
             echo $REGISTRY_SERVER "REGISTRY_SERVER"
             echo $REGISTRY_NAME "REGISTRY_NAME"
