--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,10 +11,10 @@ jobs:
           post:
             - git fetch --all
       - setup_remote_docker
-      - run: WORKDIR /app
-          ENV PATH /app/node_modules/.bin:$PATH
-          COPY package.json ./
-          COPY yarn.lock ./
+      - run: cd /app
+          env PATH /app/node_modules/.bin:$PATH
+          cp package.json ./
+          cp yarn.lock ./
       - restore_cache:
           name: Restore Yarn Package Cache
           keys:
@@ -31,7 +31,7 @@ jobs:
           command: yarn run test
       - run:
           name: Copying Directory
-          command: COPY . ./
+          command: cp . ./
       - run:
           name: Run Build
           command: yarn run build
