--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
             docker build -t $REGISTRY_SERVER/$IMAGE__NAME .
             docker login -u $REGISTRY_UN -p $REGISTRY_PW $REGISTRY_SERVER
             docker push $REGISTRY_SERVER/$IMAGE__NAME
-#            docker rmi -f $REGISTRY_SERVER/$IMAGE__NAME
+            docker rmi -f $REGISTRY_SERVER/$IMAGE__NAME
 #            - save_cache:
 #                name: Save Yarn Package Cache
 #                key: yarn-packages-{{ checksum "yarn.lock" }}
