--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,3 +38,11 @@ jobs:
             docker login -u $REGISTRY_UN -p $REGISTRY_PW $REGISTRY_SERVER
             docker push $REGISTRY_SERVER/$IMAGE__NAME
             docker rmi -f $REGISTRY_SERVER/$IMAGE__NAME
+workflows:
+  version: 2
+  build-deploy-image:
+    jobs:
+      - build:
+          filters:
+            branches:
+              only: master
