--- a/package.json
+++ b/package.json
@@ -52,9 +52,12 @@
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
-      "!<rootDir>/node_modules/",
-      "!<rootDir>/src/index.js",
-      "!<rootDir>/src/App.jsx"
+      "!node_modules/",
+      "!src/index.js",
+      "!src/App.jsx",
+      "!src/index.ssr.js",
+      "!src/serviceWorker.js"
+
     ]
   },
   "husky": {
